--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "swiper": "8.4.6"
+    "swiper": "^8.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
